Removing all un-necessary files

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@
 #    |  |  \   --. /  .'.  \  |  |
 #    `--'   `----''--'   '--' `--'
 
-## => Custom settings
+## => Settings over-ridden by GitHub
 source: ./docs
 
 
@@ -185,22 +185,15 @@ highlighter : rouge
 permalink   : date
 
 exclude:
-  - CHANGELOG.md
-  - HOW_TO_RELEASE.md
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README-*.md
   - README.md
-  - gulpfile.js
   - jekyll-text-theme.gemspec
   - package-lock.json
   - package.json
   - /docs
-  - /node_modules
-  - /screenshots
-  - /test
-  - /vendor
 
 defaults:
   - scope:
