Enabling titles again

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,6 +1,6 @@
 header:
-  - titles: Archive
+  - title: Archive
     url: /archive.html
 
-  - titles: About
+  - title: About
     url: /about.html
