Personal home-page

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author:
   url       : https://www.adriengallet.com
   avatar    : # path or url of avatar image (square)
   bio       : Doctoral researcher amongst other things.
-  email     : 
+  email     : agallet1@sheffield.ac.uk
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
@@ -49,8 +49,8 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  linkedin  : adriengallet # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  github    : AdrienGallet# "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
