--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@
 #    |  |  \   --. /  .'.  \  |  |
 #    `--'   `----''--'   '--' `--'
 
-## => Custom settings
+## => Settings over-ridden by GitHub
 source: ./docs
 
 
@@ -40,7 +40,7 @@ author:
   url       : https://www.adriengallet.com
   avatar    : # path or url of avatar image (square)
   bio       : Doctoral researcher amongst other things.
-  email     : 
+  email     : agallet1@sheffield.ac.uk
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
@@ -49,8 +49,8 @@ author:
   medium    : # "user_name" the last part of your profile url, e.g. https://medium.com/user_name
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
-  linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  linkedin  : adriengallet # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
+  github    : AdrienGallet# "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
@@ -185,22 +185,15 @@ highlighter : rouge
 permalink   : date
 
 exclude:
-  - CHANGELOG.md
-  - HOW_TO_RELEASE.md
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README-*.md
   - README.md
-  - gulpfile.js
   - jekyll-text-theme.gemspec
   - package-lock.json
   - package.json
   - /docs
-  - /node_modules
-  - /screenshots
-  - /test
-  - /vendor
 
 defaults:
   - scope:
