Minimum viable product

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,15 @@
 ## => Settings over-ridden by GitHub
 source: ./docs
 
+## => Collections
+##############################
+collections:
+  home_page_categories:
+    output: true
+    order:
+      - 01_publications.md
+      - 02_about.md
+
 
 ## => Site Settings
 ##############################
