--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,6 +1,6 @@
 header:
-  - title: Archive
-    url: /archive
+  - title: Publications
+    url: /publications
 
   - title: About
     url: /about
