--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ collections:
 ##############################
 text_skin: dark_UoS # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: tomorrow-night # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : https://www.adriengallet.com/ # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : https://www.adriengallet.com # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : AdrienGallet
 description: > # this means to ignore newlines until "Language & timezone"
