--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,6 +1,6 @@
 header:
   - title: Publications
-    url: /publications.html
+    url: /publications
 
   - title: About
-    url: /about.html
+    url: /about
